--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                         <!-- style="width:100%;height:100%;border:none;" -->
                         <!-- <iframe poster="img/img1.jpeg" src="https://player.vimeo.com/video/562717273?h=939feaf80f&autoplay=1&title=0&byline=0&portrait=0" allowfullscreen></iframe> -->
                         <!-- <script src="https://player.vimeo.com/api/player.js"></script> -->
-                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/UzRY3BsWFYg?si=uvBgqeIbuZlxthEi&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
+                        <div class="player"></div>
+                        <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/UzRY3BsWFYg?si=uvBgqeIbuZlxthEi&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe> -->
                         <!-- <video width="450" autoplay muted loop poster="img/img1.jpeg">
                             <source src="https://youtu.be/UzRY3BsWFYg" type="video/mp4">
                         </video> -->
