ajout d'un plugin youtube

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <!-- <script type="text/javascript" src="scripts/components/YoutubePlayer.js" defer></script> -->
+    <!-- <script type="module" src="scripts/components/YoutubePlayer.js" defer></script> -->
     <script type="module" src="scripts/app.js" async></script>
     <title>JS Exo Carousel</title>
 </head>
@@ -15,6 +17,7 @@
         <div class="hero-title">Projet Carousel</div>
         <section class="carousel_container">
             <div class="title">Carousel 1</div>
+            <!-- <div id="player"></div> -->
             <div id="carousel1">
                 <div class="item_container">
                     <div class="item__image">
@@ -22,7 +25,7 @@
                         <!-- style="width:100%;height:100%;border:none;" -->
                         <!-- <iframe poster="img/img1.jpeg" src="https://player.vimeo.com/video/562717273?h=939feaf80f&autoplay=1&title=0&byline=0&portrait=0" allowfullscreen></iframe> -->
                         <!-- <script src="https://player.vimeo.com/api/player.js"></script> -->
-                        <div class="player"></div>
+                        <div id="player"></div>
                         <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/UzRY3BsWFYg?si=uvBgqeIbuZlxthEi&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe> -->
                         <!-- <video width="450" autoplay muted loop poster="img/img1.jpeg">
                             <source src="https://youtu.be/UzRY3BsWFYg" type="video/mp4">
@@ -42,6 +45,7 @@
                 <div class="item_container">
                     <div class="item__image">
                         <img src="img/img2.jpeg" alt="">
+                        <!-- <div id="player"></div> -->
                     </div>
                     <div class="item__body">
                         <div class="item__title">
