--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <!-- style="width:100%;height:100%;border:none;" -->
                         <!-- <iframe poster="img/img1.jpeg" src="https://player.vimeo.com/video/562717273?h=939feaf80f&autoplay=1&title=0&byline=0&portrait=0" allowfullscreen></iframe> -->
                         <!-- <script src="https://player.vimeo.com/api/player.js"></script> -->
-                        <div id="player-id"></div>
+                        <div class="player" id="player-id#UzRY3BsWFYg"></div>
                         <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/UzRY3BsWFYg?si=uvBgqeIbuZlxthEi&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe> -->
                         <!-- <video width="450" autoplay muted loop poster="img/img1.jpeg">
                             <source src="https://youtu.be/UzRY3BsWFYg" type="video/mp4">
@@ -76,7 +76,7 @@
                 <div class="item_container">
                     <div class="item__image">
                         <img src="img/img2.jpeg" alt="">
-                        <!-- <div id="player"></div> -->
+                        <div class="player" id="player-id#a8k8R0Q2ubY"></div>
                     </div>
                     <div class="item__body">
                         <div class="item__title">
